--- a/index.html
+++ b/index.html
@@ -327,9 +327,89 @@
       </div>
     </div>
     <!-- /.rental-description -->
-
   </section>
   <!-- /.rental -->
+  <section class="relation">
+    <div class="container">
+      <p class="relation-text">В связи с сезоном строительства, спецтранспорт для аренды разбирают быстро — успейте заказать.</p>
+      <!-- /.relation-text -->
+      <div class="relation-info">
+        <button class="btn"><a href="tel:+79194305437">Звоните нам</a></button>
+        <div class="relation-info__bottom">
+          <a href="tel:+79194305437">7-919-43-05-437 Сигарев Евгений</a>
+          <a href="tel:+79192800624">7-919-28-00-624 Луцкий Михаил</a>
+          <p>на связи 24/7</p>
+        </div>
+      </div>
+      <!-- /.relation-info -->
+    </div>
+    <!-- /.container -->
+  </section>
+  <!-- /.relation -->
+  <section class="delivery">
+    <img class="fon3" src="img/effect3.png" alt="effect3">
+    <img class="bg3" src="img/bg-3.jpg" alt="bg">
+    <img class="bg4" src="img/bg-4.jpg" alt="bg">
+    <div class="container">
+      <p class="delivery-text">Иметь собственный парк техники и не заниматься доставкой строительных материалов — бред</p>
+      <!-- /.delivery-text -->
+      <div class="title">Вы можете заказать доставку нерудных <br>стройматериалов по г. Белгород и Белгородской обл.</div>
+      <!-- /.title -->
+      <div class="delivery-block">
+        <img src="img/line.png" alt="line">
+        <div class="delivery-card one">
+          <div class="delivery-card__title">
+            Мы продаём песок из различных карьеров:
+          </div>
+          <!-- /.delivery-card__title -->
+          <div class="delivery-card__list">
+            <ul>
+              <li>черный  </li>
+              <li>природный желтый</li>
+              <li>мытый белый</li>
+            </ul>
+          </div>
+          <!-- /.delivery-card__list -->
+          <div class="delivery-card__content">
+            <strong>А также:</strong> грунт, чернозем, керамзит, шлак, глину для планировки участка и засыпки цоколя, навоз для садово-огородного участка<br> Делаем поставку щебня в заказанном количестве и в соответствии с качественными, технологическими характеристиками
+          </div>
+          <!-- /.delivery-card__content -->
+        </div>
+        <!-- /.delivery-card -->
+        <div class="delivery-card two">
+          <div class="delivery-card__title">
+            Доставим отсев следующих характеристик:
+          </div>
+          <!-- /.delivery-card__title -->
+          <div class="delivery-card__list">
+            <ul>
+              <li>отсев сланец, фракция 0х20 </li>
+              <li>отсев кварцито-песчаник, фракция 0х10 </li>
+              <li>отсев гранитный, фракция 0х10</li>
+              <li>кварцит, щебень сланец, гранит 5х20, 20х40 </li>
+              <li>щебень сланец 20х60, 0х80</li>
+            </ul>
+          </div>
+          <!-- /.delivery-card__list -->
+        </div>
+        <!-- /.delivery-card -->
+        <div class="delivery-card three">
+          <div class="delivery-card__title">
+            Оплата производится в любой удобной для вас форме.
+          </div>
+          <!-- /.delivery-card__title -->
+          <div class="delivery-card__content">
+            Менеджер проработает с вами каждый пункт договора и всевозможные составляющие. Мы всегда на связи 24/7.
+          </div>
+          <!-- /.delivery-card__content -->
+        </div>
+        <!-- /.delivery-card -->
+      </div>
+      <!-- /.delivery-block -->
+    </div>
+    <!-- /.container -->
+  </section>
+  <!-- /.delivery -->
 </body>
 
 </html>
