--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
           <div class="text">ООО «Аренда Спецтехники СПАРТА» <br>Белгород</div>
         </div>
         <!-- /.header-logo -->
+        <div class="hamburger">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
         <div class="header-menu">
           <ul class="nav">
             <li class="nav-link">
