--- a/index.html
+++ b/index.html
@@ -25,25 +25,25 @@
           <span></span>
         </div>
         <div class="header-menu">
-          <ul class="nav">
-            <li class="nav-link">
+          <ul class="menu">
+            <li class="menu-link">
               <a href="#">Главная</a>
             </li>
-            <!-- /.nav-link -->
-            <li class="nav-link">
+            <!-- /.menu-link -->
+            <li class="menu-link">
               <a href="#">О компании</a>
             </li>
-            <!-- /.nav-link -->
-            <li class="nav-link">
+            <!-- /.menu-link -->
+            <li class="menu-link">
               <a href="#">Спецтехника</a>
             </li>
-            <!-- /.nav-link -->
-            <li class="nav-link">
+            <!-- /.menu-link -->
+            <li class="menu-link">
               <a href="#">Первозка сыпучих материалов</a>
             </li>
-            <!-- /.nav-link -->
+            <!-- /.menu-link -->
           </ul>
-          <!-- /.nav -->
+          <!-- /.menu -->
         </div>
         <!-- /.header-menu -->
       </div>
@@ -376,7 +376,7 @@
           </div>
           <!-- /.delivery-card__list -->
           <div class="delivery-card__content">
-            <strong>А также:</strong> грунт, чернозем, керамзит, шлак, глину для планировки участка и засыпки цоколя, навоз для садово-огородного участка<br> Делаем поставку щебня в заказанном количестве и в соответствии с качественными, технологическими характеристиками
+            <strong class="strong">А также:</strong> грунт, чернозем, керамзит, шлак, глину для планировки участка и засыпки цоколя, навоз для садово-огородного участка<br> Делаем поставку щебня в заказанном количестве и в соответствии с качественными, технологическими характеристиками
           </div>
           <!-- /.delivery-card__content -->
         </div>
@@ -415,6 +415,40 @@
     <!-- /.container -->
   </section>
   <!-- /.delivery -->
+  <footer class="footer">
+    <div class="container">
+      <div class="info">
+        <div class="info-phone">
+          <a href="tel:+79194305437">7-919-43-05-437 Сигарев Евгений</a>
+          <a href="tel:+79192800624">7-919-28-00-624 Луцкий Михаил</a>
+        </div>
+        <!-- /.info-phone -->
+        <div class="info-job">
+          <img src="img/job.png" alt="job">
+          <div class="info-job__text">Разработано консалтинговой<br> компанией «Деловой потенциал»</div>
+        </div>
+        <!-- /.info-job -->
+      </div>
+      <!-- /.info -->
+      <div class="address">​Россия, Белгородская обл. Белгородский р-н, п.Северный-Первый, ул.Берёзовая, д. 1Б, ​2 этаж</div>
+      <!-- /.address -->
+      <div class="inn">
+        <div class="left">инн:</div>
+        <div class="right">И.П. Луцкий Михаил</div>
+      </div>
+      <div class="politic">
+        © Разработка и сопровождение сайтов <a href="#">Деловой потенциал</a> 
+      </div>
+      <!-- /.politic -->
+      <div class="rights">
+        Все права защищены. Использование материалов сайта разрешено только с согласия правообладателя
+      </div>
+      <!-- /.rights -->
+    </div>
+    <!-- /.container -->
+  </footer>
+  <!-- /.footer -->
+  <script src="js/script.js"></script>
 </body>
 
 </html>
