--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sparta</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -140,16 +139,19 @@
       </div>
       <!-- /.container -->
     </div>
-     <!-- /.top -->
-     <div class="bottom">
-       <div class="container">
+    <!-- /.top -->
+    <div class="bottom">
+      <div class="container">
         <h2 class="title">Всего пару слов о нашей компании</h2>
-        <p>Уже более 10 лет наша главная миссия — обеспечить вас мощной и надёжной спецтехникой для строительства или дорожных работ.<br><br>  Вопросы, связанные с обслуживанием, содержанием и сохранением солидного и разнообразного автопарка, мы берём на себя.<br><br> Мы подберём вам технику для поддержки цикличных процессов и под конкретные задачи.
+        <p>Уже более 10 лет наша главная миссия — обеспечить вас мощной и надёжной спецтехникой для строительства или
+          дорожных работ.<br><br> Вопросы, связанные с обслуживанием, содержанием и сохранением солидного и
+          разнообразного автопарка, мы берём на себя.<br><br> Мы подберём вам технику для поддержки цикличных процессов
+          и под конкретные задачи.
         </p>
-       </div>
-       <!-- /.container -->
-     </div>
-     <!-- /.bottom -->
+      </div>
+      <!-- /.container -->
+    </div>
+    <!-- /.bottom -->
   </section>
   <section class="rental">
     <img src="img/effect.png" alt="effect" class="fon">
@@ -175,7 +177,7 @@
               <!-- /.card-item__descr -->
             </div>
             <button class="card-item__button btn">
-              <a href="tel:+79192800624">заказать</a> 
+              <a href="tel:+79192800624">заказать</a>
             </button>
             <!-- /.card-item__button -->
           </div>
@@ -201,7 +203,7 @@
               <!-- /.card-item__descr -->
             </div>
             <button class="card-item__button btn">
-              <a href="tel:+79192800624">заказать</a> 
+              <a href="tel:+79192800624">заказать</a>
             </button>
             <!-- /.card-item__button -->
           </div>
@@ -214,12 +216,13 @@
               </div>
               <!-- /.card-item__title -->
               <div class="card-item__descr">
-                Длина x Ширина x Высота (без рыхлителя)- 5.14 x 3.38 x 3.03 м.<br> Ширина/высота отвала - 3.38 x 1.15 м. Длина опорной поверхности - 2.43 м.
+                Длина x Ширина x Высота (без рыхлителя)- 5.14 x 3.38 x 3.03 м.<br> Ширина/высота отвала - 3.38 x 1.15 м.
+                Длина опорной поверхности - 2.43 м.
               </div>
               <!-- /.card-item__descr -->
             </div>
             <button class="card-item__button btn">
-              <a href="tel:+79192800624">заказать</a> 
+              <a href="tel:+79192800624">заказать</a>
             </button>
             <!-- /.card-item__button -->
           </div>
@@ -232,18 +235,18 @@
               </div>
               <!-- /.card-item__title -->
               <div class="card-item__descr">
-                Номинальная грузоподъемность - 3 т. 
-                <br>Объем ковша - 1.8 м3. 
-                <br>Габаритные размеры - 2.52 x 6.97 м. 
-                <br>Колея - 1.86 м. 
-                <br>Колесная база -2.7 м. 
-                <br>Габаритная ширина(без ковша) - 2.3 м. 
+                Номинальная грузоподъемность - 3 т.
+                <br>Объем ковша - 1.8 м3.
+                <br>Габаритные размеры - 2.52 x 6.97 м.
+                <br>Колея - 1.86 м.
+                <br>Колесная база -2.7 м.
+                <br>Габаритная ширина(без ковша) - 2.3 м.
                 <br>Высота выгрузки (по ковшу) - 2.95 м.
               </div>
               <!-- /.card-item__descr -->
             </div>
             <button class="card-item__button btn">
-              <a href="tel:+79192800624">заказать</a> 
+              <a href="tel:+79192800624">заказать</a>
             </button>
             <!-- /.card-item__button -->
           </div>
@@ -256,14 +259,14 @@
               </div>
               <!-- /.card-item__title -->
               <div class="card-item__descr">
-                Глубина копания - 5.58 м. 
-                <br>Масса - 8.4 т. 
+                Глубина копания - 5.58 м.
+                <br>Масса - 8.4 т.
                 <br>Объём ковша - 1 м3.
               </div>
               <!-- /.card-item__descr -->
             </div>
             <button class="card-item__button btn">
-              <a href="tel:+79192800624">заказать</a> 
+              <a href="tel:+79192800624">заказать</a>
             </button>
             <!-- /.card-item__button -->
           </div>
@@ -276,14 +279,14 @@
               </div>
               <!-- /.card-item__title -->
               <div class="card-item__descr">
-                КАМАЗ-65201 
-                <br> Максимальная грузоподъёмность - 40 т. 
+                КАМАЗ-65201
+                <br> Максимальная грузоподъёмность - 40 т.
                 <br>Длина стрелы с гуськом - 31 м. Класс шасси : вездеход
               </div>
               <!-- /.card-item__descr -->
             </div>
             <button class="card-item__button btn">
-              <a href="tel:+79192800624">заказать</a> 
+              <a href="tel:+79192800624">заказать</a>
             </button>
             <!-- /.card-item__button -->
           </div>
@@ -301,14 +304,18 @@
         <div class="title">ТК «СПАРТА» — мы работаем на совесть — вы экономите!
         </div>
         <ul class="list">
-          <li class="list__item"><strong> Вы получаете опытный персонал.</strong> А значит вам не нужно содержать штат водителей и специалистов, имеющих соответствующие форму допуска и квалификацию;</li>
+          <li class="list__item"><strong> Вы получаете опытный персонал.</strong> А значит вам не нужно содержать штат
+            водителей и специалистов, имеющих соответствующие форму допуска и квалификацию;</li>
           <!-- /.list__item -->
-          <li class="list__item"> <strong>Вы экономите на покупке спецтехники под конкретные задачи.</strong>  Мы подбираем для вас транспорт под любые цели;</li>
+          <li class="list__item"> <strong>Вы экономите на покупке спецтехники под конкретные задачи.</strong> Мы
+            подбираем для вас транспорт под любые цели;</li>
           <!-- /.list__item -->
-          <li class="list__item"><strong> Вы экономите на содержании автопарка.</strong> Мы сами обеспечиваем заправку и сервис спецтехники;</li>
+          <li class="list__item"><strong> Вы экономите на содержании автопарка.</strong> Мы сами обеспечиваем заправку и
+            сервис спецтехники;</li>
           <!-- /.list__item -->
           <li class="list__item">
-            <strong>Вы экономите на размещении машин.</strong>  А транспорт по окончании работ убывает в наш автопарк. Потому что у нас есть;
+            <strong>Вы экономите на размещении машин.</strong> А транспорт по окончании работ убывает в наш автопарк.
+            Потому что у нас есть;
           </li>
           <!-- /.list__item -->
           <li class="list__item">
@@ -316,7 +323,8 @@
           </li>
           <!-- /.list__item -->
           <li class="list__item">
-            <strong>Мы снимаем с вас груз проблем.</strong>  Поэтому с нами сотрудничают:<br> строительные компании<br> дорожные и коммунальные службы<br> корпоративные клиенты<br> фермеры <br>частные лица;
+            <strong>Мы снимаем с вас груз проблем.</strong> Поэтому с нами сотрудничают:<br> строительные компании<br>
+            дорожные и коммунальные службы<br> корпоративные клиенты<br> фермеры <br>частные лица;
           </li>
           <!-- /.list__item -->
           <li class="list__item">
@@ -324,7 +332,8 @@
           </li>
           <!-- /.list__item -->
           <li class="list__item">
-            <strong>Цены не фиксированные.</strong>  Зависят от срока заключения договора, удаленности выполнения работ и накладных расходов;
+            <strong>Цены не фиксированные.</strong> Зависят от срока заключения договора, удаленности выполнения работ и
+            накладных расходов;
           </li>
           <!-- /.list__item -->
         </ul>
@@ -336,7 +345,8 @@
   <!-- /.rental -->
   <section class="relation">
     <div class="container">
-      <p class="relation-text">В связи с сезоном строительства, спецтранспорт для аренды разбирают быстро — успейте заказать.</p>
+      <p class="relation-text">В связи с сезоном строительства, спецтранспорт для аренды разбирают быстро — успейте
+        заказать.</p>
       <!-- /.relation-text -->
       <div class="relation-info">
         <button class="btn"><a href="tel:+79194305437">Звоните нам</a></button>
@@ -356,9 +366,11 @@
     <img class="bg3" src="img/bg-3.jpg" alt="bg">
     <img class="bg4" src="img/bg-4.jpg" alt="bg">
     <div class="container">
-      <p class="delivery-text">Иметь собственный парк техники и не заниматься доставкой строительных материалов — бред</p>
+      <p class="delivery-text">Иметь собственный парк техники и не заниматься доставкой строительных материалов — бред
+      </p>
       <!-- /.delivery-text -->
-      <div class="title">Вы можете заказать доставку нерудных <br>стройматериалов по г. Белгород и Белгородской обл.</div>
+      <div class="title">Вы можете заказать доставку нерудных <br>стройматериалов по г. Белгород и Белгородской обл.
+      </div>
       <!-- /.title -->
       <div class="delivery-block">
         <img src="img/line.png" alt="line">
@@ -369,14 +381,16 @@
           <!-- /.delivery-card__title -->
           <div class="delivery-card__list">
             <ul>
-              <li>черный  </li>
+              <li>черный </li>
               <li>природный желтый</li>
               <li>мытый белый</li>
             </ul>
           </div>
           <!-- /.delivery-card__list -->
           <div class="delivery-card__content">
-            <strong class="strong">А также:</strong> грунт, чернозем, керамзит, шлак, глину для планировки участка и засыпки цоколя, навоз для садово-огородного участка<br> Делаем поставку щебня в заказанном количестве и в соответствии с качественными, технологическими характеристиками
+            <strong class="strong">А также:</strong> грунт, чернозем, керамзит, шлак, глину для планировки участка и
+            засыпки цоколя, навоз для садово-огородного участка<br> Делаем поставку щебня в заказанном количестве и в
+            соответствии с качественными, технологическими характеристиками
           </div>
           <!-- /.delivery-card__content -->
         </div>
@@ -415,6 +429,53 @@
     <!-- /.container -->
   </section>
   <!-- /.delivery -->
+  <section class="modal">
+    <div data-close class="modal__close"><span></span></div>
+    <div class="active">
+      <div class="modal-title">
+        ДОСТАВКА НЕРУДНЫХ МАТЕРИАЛОВ
+      </div>
+      <!-- /.title -->
+    </div>
+    <!-- /.active -->
+
+    <div class="not">
+      <!-- <img class="not-img" src="img/hot.png" alt=""> -->
+      <div class="modal-img">
+        <div class="img"><img src="img/img.jpg" alt="img"></div>
+        <!-- /.img -->
+      </div>
+      <!-- /.modal-img -->
+      <div class="modal-text">
+        <div class="content">
+          <div class="subtitle"> <strong>Мы продаём песок из различных карьеров:</strong> </div>
+          <!-- /.subtitle -->
+          <ul class="modal-list">
+            <li class="modal-link">черный </li>
+            <li class="modal-link">природный желтый</li>
+            <li class="modal-link">мытый белый</li>
+          </ul>
+          <div class="descr">
+            <strong>А также:</strong> грунт, чернозем, керамзит, шлак, глину для планировки участка и засыпки цоколя,
+            навоз для садово-огородного участка
+          </div>
+          <!-- /.descr -->
+        </div>
+        <div class="info">
+          <button class="btn"><a href="tel:+79192800624">Звоните нам</a> </button>
+          <div class="right">
+            <a href="tel:+79194305437">7-919-43-05-437 Сигарев Евгений</a>
+            <a href="tel:+79192800624">7-919-28-00-624 Луцкий Михаил</a>
+            <p>на связи 24/7</p>
+          </div>
+        </div>
+        <!-- /.info -->
+      </div>
+      <!-- /.modal-text -->
+    </div>
+    <!-- /.not -->
+
+  </section>
   <footer class="footer">
     <div class="container">
       <div class="info">
@@ -430,14 +491,15 @@
         <!-- /.info-job -->
       </div>
       <!-- /.info -->
-      <div class="address">​Россия, Белгородская обл. Белгородский р-н, п.Северный-Первый, ул.Берёзовая, д. 1Б, ​2 этаж</div>
+      <div class="address">​Россия, Белгородская обл. Белгородский р-н, п.Северный-Первый, ул.Берёзовая, д. 1Б, ​2 этаж
+      </div>
       <!-- /.address -->
       <div class="inn">
         <div class="left">инн:</div>
         <div class="right">И.П. Луцкий Михаил</div>
       </div>
       <div class="politic">
-        © Разработка и сопровождение сайтов <a href="#">Деловой потенциал</a> 
+        © Разработка и сопровождение сайтов <a href="#">Деловой потенциал</a>
       </div>
       <!-- /.politic -->
       <div class="rights">
